#
# if Install hangs, then remove folder:  /home/mgiadmin/.cache/pip and try again
#

TAG: pwi-6-0-22-89
DATE: 11/08/2023
STAFF: jer
wts2-1317/fl2-613 prism enhancements

TAG: pwi-6-0-22-88
DATE: 11/04/2023
STAFF: lec
fl2-618/Reference error on PWI marker module

TAG: pwi-6-0-22-87
DATE: 11/03/2023
STAFF: lec
wts2-1311/fl2-615/improve lib_py_postgres/PWI-EMAPS issue/wrong terms
EmapaClipboardController.js

TAG: pwi-6-0-22-86
DATE: 11/02/2023
STAFF: lec
removed: not working for Gel
wts2-1298/fl2-592/assay module double label feature: add reminder message if you forget to Process

TAG: pwi-6-0-22-85
TAG: pwi-6-0-22-84
DATE: 11/01/2023
STAFF: lec
wts2-1316/fl2-610/Lit Triage module status history search problem
wts2-1298/fl2-592/assay module double label feature: add reminder message if you forget to Process

TAG: pwi-6-0-22-83
DATE: 10/18/2023
STAFF: jer
wts2-1299/fl2-586/P-WI Cell Type Browser - definition search function

TAG: pwi-6-0-22-82
TAG: pwi-6-0-22-81
DATE: 10/19/2023
STAFF: lec
wts2-1301/fl2-579/P-WI GXD Assay Module Results Table header - add age
wts2-1303/fl2-578/genotype null search treated as selected record
wts2-1307/fl2-582/duplicate notes in allele/strain pwi
wts2-1300/fl2-585/P-WI GXD Index Summary - add synonyms

TAG: pwi-6-0-22-80
DATE: 10/12/2023
STAFF: lec
wts2-1297/fl2-572/P-WI - Better control of Add button in LitTriage Module

TAG: pwi-6-0-22-79
TAG: pwi-6-0-22-78
TAG: pwi-6-0-22-77
DATE: 10/12/2023
STAFF: lec
wts2-1304/fl2-577/Can't add references or markers

TAG: pwi-6-0-22-76
DATE: 10/05/2023
STAFF: lec
wts2-1293/fl2-570/Add new terms to MCV/TDC
wts2-1297/fl2-572/P-WI - Better control of Add button in LitTriage Module

for modules that conatin warning "Cannot Add if a record is already selected.":
add disable logic to html as well
allele/AlleleController.js
allelederivation/AlleleDerivationController.js
antibody/AntibodyController.js
antigen/AntigenController.js
assay/AssayController.js
clonelib/CloneLibController.js