@@ -157,6 +157,7 @@ and <i>Variant Allele</i> fields you only use single-letter codes (upper or lowe
 <h4>HGVS Notation</h4>
 <ul>
 <li>Displays the Human Genome Variation Society notation for the variant.</li>
+<li>Click the <font color=”#0000ff”>Copy HGVS</font> button to to create the HGVS string. This script takes the chromosome and curated genomic start coordinate, reference sequence and variant sequence from what is currently displayed. If any one of these fields is empty, a warning will pop up. Please check the HGVS string against your input to make sure that the amino acid and transcript changes correspond.
 </ul>
 <h4>Variant References</h4>
 <ul>
