@@ -1,14 +1,14 @@
 			<div class="row ">
 				<div class="col-sm-4" style="">
 				<label class="label label-edit">HGVS</label>
-                                <button type="button" id="hgvsButton" ng-click="copyHGVS()" >Copy HGVS</button>
                                 <br>
 				<textarea class="form-control" rows=2 ng-model="vm.variant.description" id="description" name="description" placeholder="" ></textarea>
 				</div>
 
 				<div class="col-sm-2" style="">
 				<label class="label label-edit">Variant References</label>
-				<textarea class="form-control" rows=2 ng-model="vm.variant.references" id="variantJnumIDs" name="variantJnumIDs" placeholder="" ></textarea>
+				<textarea class="form-control" rows=1 ng-model="vm.variant.references" id="variantJnumIDs" name="variantJnumIDs" placeholder="" ></textarea>
+                                <button type="button" class="copyOver" id="hgvsButton" ng-click="copyHGVS()" >Copy HGVS</button>
 				</div>
 
 				<div class="col-sm-3" style="">
